bk_ida/gccida/g1/gen_cmpstrsi
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_cmpstrsi/src/insn-emit.c:16159:26: error: use of undeclared identifier 'machine_mode'
v8 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operand1->fld[0].rtx); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_cmpstrsi/src/insn-emit.c:16160:26: error: use of undeclared identifier 'machine_mode'
v9 = copy_to_mode_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), operand2->fld[0].rtx); 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_cmpstrsi/src/obj/insn-emit.o] Error 1
